force-app/main/default/objects/tspa__InviteTechSeeConfig__c/fields/tspa__Description__c.field-meta.xml
<CustomField>
    <fullName>tspa__Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>