force-app/main/default/objects/tspa__InviteTechSeeConfig__c/fields/tspa__Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>tspa__Sort_Order__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Used to sort field orders on configuration panel.</description>
    <label>Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>